Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Biologic_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Biologic_Co_ordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biologic Co-ordinator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Contact from associated Account/Clinic.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>