Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Payers__c.field-meta.xml
<CustomField>
    <fullName>Payers__c</fullName>
    <label>Payers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1199 National Benefit Fund</fullName>
            </value>
            <value>
                <fullName>84 Lumber</fullName>
            </value>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>ABBVIE COUPON PROGRAMS</fullName>
            </value>
            <value>
                <fullName>ABC SUPPLY CO</fullName>
            </value>
            <value>
                <fullName>ACCENTURE</fullName>
            </value>
            <value>
                <fullName>ACCESSONE CONSUMER HEALTH</fullName>
            </value>
            <value>
                <fullName>ACWA JPIA</fullName>
            </value>
            <value>
                <fullName>Adp Employees</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>AGELITY</fullName>
            </value>
            <value>
                <fullName>Alcatel Lucent</fullName>
            </value>
            <value>
                <fullName>ALL OTHER THIRD PARTY</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>ALMIRALL COUPON PROGRAMS</fullName>
            </value>
            <value>
                <fullName>Alpha Scrip</fullName>
            </value>
            <value>
                <fullName>ALTRUA HEALTHSHARE ASSISTANCE PROGRAM</fullName>
            </value>
            <value>
                <fullName>AMAZON</fullName>
            </value>
            <value>
                <fullName>AME BENEFITS DISCOUNT PROGRAMS</fullName>
            </value>
            <value>
                <fullName>AmeriBen</fullName>
            </value>
            <value>
                <fullName>American Association Of Retired Persons</fullName>
            </value>
            <value>
                <fullName>AMERICAN AUTOMOBILE ASSOCIATION AAA</fullName>
            </value>
            <value>
                <fullName>AMERICAN CANCER SOCIETY DISCOUNT PROGRAMS</fullName>
            </value>
            <value>
                <fullName>American Casino &amp; Entertainment Properties</fullName>
            </value>
            <value>
                <fullName>AMERICAN COLLEGE HEALTH ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>American Express Company</fullName>
            </value>
            <value>
                <fullName>AMERICAN FOREIGN SERVICE PROTECTIVE ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>American Postal Workers Union Health Plan</fullName>
            </value>
            <value>
                <fullName>AMERICAS PHARMACY SOURCE</fullName>
            </value>
            <value>
                <fullName>Amerigas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>