Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Physician_Type__c.field-meta.xml
<CustomField>
    <fullName>Physician_Type__c</fullName>
    <label>Physician Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Rheumatologist</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>