Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Publications__c.field-meta.xml
<CustomField>
    <fullName>Publications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publications</label>
    <type>Checkbox</type>
</CustomField>