Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Recommend_Speaking__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Speaking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Speaking</label>
    <type>Checkbox</type>
</CustomField>