Mindera/LIMSCallout/force-app/main/default/objects/Contact/fields/Studies__c.field-meta.xml
<CustomField>
    <fullName>Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Studies</label>
    <type>Checkbox</type>
</CustomField>