Mindera/LIMSCallout/force-app/main/default/objects/Contact/validationRules/Must_be_10_digit_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_10_digit_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( NPI_Number__c, &quot;(\\d){10}&quot;))</errorConditionFormula>
    <errorDisplayField>NPI_Number__c</errorDisplayField>
    <errorMessage>NPI must be a 10 digit number.</errorMessage>
</ValidationRule>